# ai-amm

./: Cargo.toml  README.md
agent/: agent.py  metadata.json
src/: agent.rs  events.rs  lib.rs
