[package]
name = "contract"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }
near-contract-standards = "5.6.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = "0.8"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
